# LinuxWeather

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
packaging/: weather-app.desktop
scripts/: run-weather.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/data/: alertClient.ts  geolocationClient.ts  openMeteoClient.ts  rainViewerClient.ts  types.ts  weatherCodes.ts
src/services/: alertService.ts  gradientService.ts  locationService.ts  radarService.ts  settingsService.ts  unitService.ts  weatherService.ts
src/store/: useAppStore.ts
src/ui/components/: AlertBanner.tsx  AnimatedBackground.tsx  CitySearch.tsx  CityTabs.tsx  DailyForecast.tsx  DetailCard.tsx  DetailGrid.tsx  HeroHeader.tsx  HourlyStrip.tsx  Layout.tsx  RadarMap.tsx  SettingsSheet.tsx  TrayPopup.tsx
src/ui/styles/: theme.ts
src/utils/: format.ts
